--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -141,7 +141,7 @@
             style="width: 100%"
           >
             <div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">Old Name</span>
+              <span class="input-group-text" id="addon-wrapping">Id</span>
               <input
                 type="text"
                 name="oldname"
