--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -2,7 +2,7 @@
 	width: 10%;
 	height: 40px;
 	cursor: pointer;
-	border-radius: 10px 0px 10px 0px;
+	border-radius: 10px;
 	position: relative;
 	background: linear-gradient(#4885e7, #19cae6);
 	
