--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -28,7 +28,7 @@
 						style="width: 100%"
 					>
 						<div class="input-group flex-nowrap" style="width: 80%">
-							<span class="input-group-text" id="addon-wrapping">Add Link</span>
+							<span class="input-group-text" id="addon-wrapping">Add News</span>
 							<input
 								type="text"
 								name="uploadlink"
