--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="stylesheets/contactus.css" />
 		<link rel="stylesheet" href="stylesheets/chatbot.css" />
-		<link rel="stylesheet" href="sweetalert2.min.css">
+		<link rel="stylesheet" href="sweetalert2.min.css" />
 		<title>Contact Us</title>
 		<style>
-			.contactusnav{
-			background-color: #369afe;
-			border-radius: 0% 50% 0% 50%;
-			color: white;
-		}
+			.contactusnav {
+				background-color: #369afe;
+				border-radius: 0% 50% 0% 50%;
+				color: white;
+			}
 		</style>
 	</head>
 	<body>
@@ -76,7 +76,7 @@
 				</div>
 				<div class="right">
 					<h1>Enquiry Form</h1>
-					<form action="/contactus" method="POST">
+					<form action="/contactus" class="form" method="POST">
 						<div class="input-container">
 							<label for="name">Name <span style="color: red">*</span></label>
 							<input
@@ -130,10 +130,8 @@
 		</section>
 
 		<% if(success && success.length) {%>
-			<p class="sweetp"><%= success %> </p>
-		<% } %>
-
-		<%- include('./layout/footer') %>
+		<p class="sweetp"><%= success %></p>
+		<% } %> <%- include('./layout/footer') %>
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/contactus.js"></script>
