--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
 					action="/login"
 					method="POST"
 					id="login"
-					style="display: flex; flex-direction: column; width: 70vw"
+					style="display: flex; flex-direction: column;"
 				>
 					<div class="name">
 						<h1>LOGIN</h1>
