--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -19,7 +19,7 @@ body {
 	background-repeat: no-repeat;
 }
 .login {
-	width: 30%;
+	padding: 1rem 3rem;
 	display: flex;
 	flex-direction: column;
 	background: rgba(256, 256, 256, 0.5);
@@ -56,7 +56,7 @@ body {
 }
 
 .Username input {
-	width: 30%;
+	width: 100%;
 	height: 3rem;
 	border: 1px solid #c2c2c2;
 	font-size: 1rem;
