--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -50,7 +50,7 @@ body {
 	justify-content: center;
 	flex-direction: column;
 	transition: all 0.5s ease;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	overflow-x: hidden;
 }
 
