--- a/public/stylesheets/sliderrevolution.css
+++ b/public/stylesheets/sliderrevolution.css
@@ -1,58 +1,63 @@
-*{
+* {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
-body{
+body {
 	overflow-x: hidden;
 	transition: all 1s ease !important;
-
 }
-
-.sidebar a{
+.left {
+	position: fixed !important;
+	bottom: 0 !important;
+	z-index: 2 !important;
+}
+.sidebar a {
 	text-decoration: none;
-	
 }
 
-.ahover:hover{
-	background: #D2F4EA;
+.ahover:hover {
+	background: #d2f4ea;
 	margin: 2px;
 	padding: 2px;
 	border: 0.7px solid #9beaec;
 }
 
 /* Slider Revolution */
-.mainsection{
+.mainsection {
 	height: 90vh;
 	width: 100%;
 	display: flex;
 }
 
-.left{
+.left {
 	position: relative;
 }
 
-.right{
+.right {
 	position: relative;
 	height: 90%;
 	width: 90%;
+	right: 0;
+	position: absolute;
+	top: 5vh;
 }
 
-.table{
+.table {
 	border: 2px solid rgb(53, 49, 49);
 	border-radius: 2px;
 	width: 80%;
 }
 
-.currentSliderimgurl{
+.currentSliderimgurl {
 	opacity: 0;
 	position: absolute;
 	height: 0%;
 	width: 0%;
 }
 
-.imgform{
+.imgform {
 	height: 100%;
 	width: 100%;
 	display: flex;
@@ -61,7 +66,7 @@ body{
 	align-items: center;
 }
 
-.sliderimgurl{
+.sliderimgurl {
 	opacity: 0;
 	position: absolute;
 	overflow: hidden;
@@ -69,27 +74,27 @@ body{
 	width: 0%;
 }
 
-.preview{
+.preview {
 	position: fixed;
 	height: 100vh;
 	width: 100%;
 	left: 50%;
 	top: 50%;
-	transform: translate(-50%,-41%);
+	transform: translate(-50%, -41%);
 	display: none;
 	z-index: 5;
 	justify-content: center;
 	align-items: center;
 }
 
-.preview img{
+.preview img {
 	justify-content: center;
 	align-items: center;
 	height: 60%;
 	width: 60%;
 }
 
-.closesvg{
+.closesvg {
 	position: absolute;
 	cursor: pointer;
 	right: 14%;
@@ -98,9 +103,6 @@ body{
 
 /* Latest Updates */
 
-
-
-.buttondiv{
+.buttondiv {
 	display: flex;
-
 }
