--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -74,13 +74,12 @@ body {
 }
 .submit {
 	border: none;
-	height: 2.5rem;
 	color: white;
 	font-size: 1.3rem;
-	width: 15%;
 	border-radius: 20px;
 	background-color: #045d63;
 	cursor: pointer;
+	padding: 0.3rem 1rem;
 }
 .submit:hover {
 	background-color: #045d6393;
