--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -1,6 +1,6 @@
 <div
 	class="flex-shrink-0 p-3 border-end bg-light sidebar"
-	style="width: 220px; height: 90vh"
+	style="width: 220px; height: 90vh; margin-top: 10vh;"
 >
 	<ul class="list-unstyled ps-0">
 		<li class="mb-4">
