--- a/views/home.ejs
+++ b/views/home.ejs
@@ -97,7 +97,7 @@
 									<span class="p">
 										<%= update.link %>
 										<% if (!(update.link1=='no link')) { %>
-											<a  href="<%= update.link1 %>" target="_blank">
+											<a class="clickhereclr"  href="<%= update.link1 %>" target="_blank">
 												-Click here
 											</a>
 										<% } %>
