--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -648,7 +648,7 @@ iframe {
 	cursor: pointer;
 	border-radius: 10px;
 	position: relative;
-	background: linear-gradient(#4885e7, #19cae6);
+	background: linear-gradient(#ffafbd, #ffc3a0);  
 	/* border: 5px solid #568037; */
 	color: #000000;
 	text-align: center;
