--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -4,7 +4,7 @@
 	cursor: pointer;
 	border-radius: 10px;
 	position: relative;
-	background: linear-gradient(#4885e7, #19cae6);
+	background: linear-gradient(#ffafbd, #ffc3a0);  
 	
 	color: #000000;
 	text-align: center;
