--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -1,186 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin panel</title>
-    <link rel="stylesheet" href="sweetalert2.min.css" />
-    <link rel="stylesheet" href="../../stylesheets/admin.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <div class="previewdiv">
-      <div class="interior">
-        <form
-          action="/admin/courses/neet"
-          method="post"
-          class="d-flex justify-content-center align-items-center flex-column"
-          style="width: 100%"
-        >
-     
-          <div class="form-floating">
-            <textarea
-              class="form-control formtextarea1"
-              name="<%#  %>"
-              cols="60"
-              style="height: 155px; resize: none"
-              minlength="10"
-              maxlength="250"
-            ></textarea>
-          </div>
-          <div class="d-flex justify-content-end" style="width: 80%">
-            <p class="spanp">
-              Characters left &nbsp;<span class="changablespan1">0</span>/250
-            </p>
-          </div>
-          <%= %>
-          <div>
-            <button
-              type="button"
-              class="btn btn-outline-secondary px-3 mt-5 me-5 closebtn"
-            >
-              Close
-            </button>
-            <button type="submit" class="btn btn-outline-primary mt-5">
-              Submit
-            </button>
-          </div>
-        </form>
-      </div>
-    </div>
-    <%- include('../../layout/adminheader') %>
-    <section class="mainsection">
-      <div class="left"><%- include('../../layout/adminSideBar') %></div>
-      <div class="right">
-        <div class="preview">
-          <h1 class="mb-5">History</h1>
-          <form
-            action="/admin/aboutus/history"
-            method="post"
-            class="d-flex justify-content-center align-items-center flex-column"
-            style="width: 100%"
-          >
-            <div class="input-group flex-nowrap" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">Content</span>
-              <textarea
-                class="form-control formtextarea"
-                name="content"
-                cols="60"
-                style="height: 90px; resize: none"
-                minlength="10"
-                maxlength="250"
-              ></textarea>
-            </div>
-            <div class="d-flex justify-content-end" style="width: 80%">
-              <p class="spanp d-flex">
-                Characters left &nbsp;<span class="changablespan">0</span>/250
-              </p>
-            </div>
-            <div class="input-group flex-nowrap" style="width: 80%">
-              <span class="input-group-text" id="addon-wrapping">Year</span>
-              <input
-                type="number"
-                name="year"
-                class="form-control yearnum"
-                aria-label="year"
-                aria-describedby="addon-wrapping"
-                id="uploadlink"
-                min="2010"
-                
-                required
-              />
-            </div>
-            <div>
-              <button
-                type="button"
-                class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
-              >
-                Back
-              </button>
-              <button type="submit" class="btn btn-outline-primary mt-5">
-                submit
-              </button>
-            </div>
-          </form>
-        </div>
-        <form
-          action="/admin/aboutus/history?_method=DELETE"
-          method="post"
-          class="imgform latestupdateform"
-        >
-          <h1 class="m-5">History</h1>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Admin panel</title>
+		<link rel="stylesheet" href="sweetalert2.min.css" />
+		<link rel="stylesheet" href="../../stylesheets/admin.css" />
+		<link rel="stylesheet" href="../../stylesheets/pagination.css" />
 
-          <table class="table" style="width: 70%">
-            <thead>
-              <tr>
-                <th scope="col">content</th>
-                <th scope="col">year</th>
-                <th scope="col">Updates</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% content.forEach(i => { %>
-              <tr>
-                <td>
-                  <input
-                    type="text"
-                    id="content"
-                    class="content"
-                    value="<%= i.content %>"
-                    readonly
-                    style="width: 80%; border: none"
-                  />
-                </td>
-                <td>
-                  <input
-                    type="text"
-                    id="year"
-                    value="<%= i.year %>"
-                    readonly
-                    style="width: 80%; border: none"
-                  />
-                </td>
-                <td>
-                  <input
-                    type="checkbox"
-                    id="checkbox"
-                    class="updatesCheckbox"
-                    name="checkbox"
-                    value="<%= i.content%>,<%= i.year %>"
-                    style="height: 20px; width: 20px"
-                  />
-                </td>
-              </tr>
-              <% }) %>
-            </tbody>
-          </table>
-          <div class="buttondiv">
-            <button type="button" class="btn btn-outline-primary addbtn px-4">
-              Add
-            </button>
-            <button
-              type="button"
-              disabled
-              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
-            >
-              Delete
-            </button>
-          </div>
-        </form>
-      </div>
-    </section>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../../javascripts/admin/aboutus/history.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+			crossorigin="anonymous"
+		/>
+	</head>
+	<body>
+		<div class="previewdiv">
+			<div class="interior">
+				<form
+					action="/admin/courses/neet"
+					method="post"
+					class="d-flex justify-content-center align-items-center flex-column"
+					style="width: 100%"
+				>
+					<div class="form-floating">
+						<textarea
+							class="form-control formtextarea1"
+							name="<%#  %>"
+							cols="60"
+							style="height: 155px; resize: none"
+							minlength="10"
+							maxlength="250"
+						></textarea>
+					</div>
+					<div class="d-flex justify-content-end" style="width: 80%">
+						<p class="spanp">
+							Characters left &nbsp;<span class="changablespan1">0</span>/250
+						</p>
+					</div>
+					<%= %>
+					<div>
+						<button
+							type="button"
+							class="btn btn-outline-secondary px-3 mt-5 me-5 closebtn"
+						>
+							Close
+						</button>
+						<button type="submit" class="btn btn-outline-primary mt-5">
+							Submit
+						</button>
+					</div>
+				</form>
+			</div>
+		</div>
+		<%- include('../../layout/adminheader') %>
+		<section class="mainsection">
+			<div class="left"><%- include('../../layout/adminSideBar') %></div>
+			<div class="right">
+				<div class="preview">
+					<h1 class="mb-5">History</h1>
+					<form
+						action="/admin/aboutus/history"
+						method="post"
+						class="d-flex justify-content-center align-items-center flex-column"
+						style="width: 100%"
+					>
+						<div class="input-group flex-nowrap" style="width: 80%">
+							<span class="input-group-text" id="addon-wrapping">Content</span>
+							<textarea
+								class="form-control formtextarea"
+								name="content"
+								cols="60"
+								style="height: 90px; resize: none"
+								minlength="10"
+								maxlength="250"
+							></textarea>
+						</div>
+						<div class="d-flex justify-content-end" style="width: 80%">
+							<p class="spanp d-flex">
+								Characters left &nbsp;<span class="changablespan">0</span>/250
+							</p>
+						</div>
+						<div class="input-group flex-nowrap" style="width: 80%">
+							<span class="input-group-text" id="addon-wrapping">Year</span>
+							<input
+								type="number"
+								name="year"
+								class="form-control yearnum"
+								aria-label="year"
+								aria-describedby="addon-wrapping"
+								id="uploadlink"
+								min="2010"
+								required
+							/>
+						</div>
+						<div>
+							<button
+								type="button"
+								class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
+							>
+								Back
+							</button>
+							<button type="submit" class="btn btn-outline-primary mt-5">
+								submit
+							</button>
+						</div>
+					</form>
+				</div>
+				<form
+					action="/admin/aboutus/history?_method=DELETE"
+					method="post"
+					class="imgform latestupdateform"
+				>
+					<h1 class="m-5">History</h1>
+
+					<table class="table" style="width: 70%">
+						<thead>
+							<tr>
+								<th scope="col">content</th>
+								<th scope="col">year</th>
+								<th scope="col">Updates</th>
+							</tr>
+						</thead>
+						<tbody class="tbody"></tbody>
+					</table>
+					<div id="pagination-container" class="mb-3"></div>
+
+					<div class="buttondiv">
+						<button type="button" class="btn btn-outline-primary addbtn px-4">
+							Add
+						</button>
+						<button
+							type="button"
+							disabled
+							class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+						>
+							Delete
+						</button>
+					</div>
+				</form>
+			</div>
+		</section>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
+			integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
+		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+		<script src="../../javascripts/admin/aboutus/history.js"></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+			crossorigin="anonymous"
+		></script>
+	</body>
 </html>
