--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -12,6 +12,8 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="../../stylesheets/admin.css" />
+		<link rel="stylesheet" href="../../stylesheets/pagination.css" />
+
 		<link rel="stylesheet" href="sweetalert2.min.css" />
 	</head>
 	<body>
@@ -79,7 +81,7 @@
 					method="post"
 					class="imgform latestupdateform"
 				>
-					<h1 class="m-5">Calendar Events</h1>
+					<h1 class="m-3">Calendar Events</h1>
 					<table class="table" style="width: 70%">
 						<thead>
 							<tr>
@@ -89,8 +91,8 @@
 							</tr>
 						</thead>
 						<tbody class="tbody"></tbody>
-						<div id="pagination-container"></div>
 					</table>
+					<div id="pagination-container" class="mb-3"></div>
 					<div class="buttondiv">
 						<button type="button" class="btn btn-outline-primary addbtn px-4">
 							Add
@@ -106,6 +108,16 @@
 				</form>
 			</div>
 		</section>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
+			integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<script src="../../javascripts/admin/home/calendarevents.js"></script>
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script
