--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -7,6 +7,8 @@
 		<title>Admin panel</title>
 		<link rel="stylesheet" href="sweetalert2.min.css" />
 		<link rel="stylesheet" href="../../stylesheets/admin.css" />
+		<link rel="stylesheet" href="../../stylesheets/pagination.css" />
+
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -78,7 +80,7 @@
 					method="post"
 					class="imgform latestupdateform"
 				>
-					<h1 class="m-5">Latest Updates</h1>
+					<h1 class="m-4">Latest Updates</h1>
 
 					<table class="table" style="width: 70%">
 						<thead>
@@ -88,41 +90,9 @@
 								<th scope="col">Updates</th>
 							</tr>
 						</thead>
-						<tbody>
-							<% arr.forEach(i => { %>
-							<tr>
-								<td>
-									<input
-										type="text"
-										id="linkinput"
-										value="<%= i.link %>"
-										readonly
-										style="width: 80%; border: none"
-									/>
-								</td>
-								<td>
-									<input
-										type="text"
-										id="linkinput"
-										value="<%= i.link1 %>"
-										readonly
-										style="width: 80%; border: none"
-									/>
-								</td>
-								<td>
-									<input
-										type="checkbox"
-										id="checkbox"
-										class="updatesCheckbox"
-										name="checkbox"
-										value="<%= i.link1 %>"
-										style="height: 20px; width: 20px"
-									/>
-								</td>
-							</tr>
-							<% }) %>
-						</tbody>
+						<tbody class="tbody"></tbody>
 					</table>
+					<div id="pagination-container" class="mb-3"></div>
 					<div class="buttondiv">
 						<button type="button" class="btn btn-outline-primary addbtn px-4">
 							Add
@@ -138,6 +108,16 @@
 				</form>
 			</div>
 		</section>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
+			integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
