--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
 		<link rel="stylesheet" href="../../stylesheets/admin.css" />
+		<link rel="stylesheet" href="../../stylesheets/pagination.css" />
+
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -126,47 +128,26 @@
 								<th scope="col">Update</th>
 							</tr>
 						</thead>
-						<tbody>
-							<% students.forEach(i => { %>
-							<tr>
-								<td>
-									<p><%= i.name %></p>
-								</td>
-								<td>
-									<p class="onclickimg"><%= i.imgname %></p>
-									<span class="currentPreviewSpan btn btn-info"
-										>Show Image</span
-									>
-									<span class="currentSliderimgurl"><%= i.studentimg %></span>
-								</td>
-								<td>
-									<p><%= i.score %></p>
-								</td>
-								<td>
-									<p><%= i.collegename %></p>
-								</td>
-								<td>
-									<input
-										type="checkbox"
-										id="checkbox"
-										class="updatesCheckbox"
-										name="checkbox"
-										value="<%= i.cloudinaryname %>"
-										style="height: 20px; width: 20px"
-									/>
-								</td>
-							</tr>
-							<% }) %>
-						</tbody>
+						<tbody class="tbody"></tbody>
 					</table>
+					<div id="pagination-container" class="mb-3"></div>
 					<div class="buttondiv">
 						<% if (students.length<9) { %>
-							<button type="button" class="btn btn-outline-primary addbtn px-4">
-								Add
-							</button>
+						<button type="button" class="btn btn-outline-primary addbtn px-4">
+							Add
+						</button>
 						<% }else{ %>
-							<p class="text-danger d-flex justify-content-center align-items-center">You have reached your limit</p> 
-						<% } %> 
+						<p
+							class="
+								text-danger
+								d-flex
+								justify-content-center
+								align-items-center
+							"
+						>
+							You have reached your limit
+						</p>
+						<% } %>
 						<button
 							type="button"
 							class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
@@ -178,6 +159,16 @@
 				</form>
 			</div>
 		</section>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
+			integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 		<script
