--- a/views/admin/results/images.ejs
+++ b/views/admin/results/images.ejs
@@ -62,10 +62,10 @@
 										type="file"
 										id="image"
 										accept="image/*"
-										class="fileimg"
+										class="fileimg uploaddisplay"
 										name="sliderimg"
 									/>
-									<span class="previewSpan btn btn-info">Preview</span>
+									<button class="previewSpan displaybtn btn" disabled>Display</button>
 									<span class="sliderimgurl"></span>
 								</td>
 								<td>
