--- a/views/admin/auth/changepassword.ejs
+++ b/views/admin/auth/changepassword.ejs
@@ -21,66 +21,45 @@
 				<%- include('../../layout/adminSideBar') %>
 			</div>
 			<div class="right">
-				<div class="preview">
-					<h1 class="mb-5">Latest Updates</h1>
-					<form
-						action="/admin/latestupdates"
-						method="post"
-						class="d-flex justify-content-center align-items-center flex-column"
-						style="width: 100%"
-					>
-						<div class="input-group flex-nowrap" style="width: 80%">
-							<span class="input-group-text" id="addon-wrapping">Add News</span>
-							<input
-								type="text"
-								name="uploadlink"
-								class="form-control inputtext"
-								aria-label="Username"
-								aria-describedby="addon-wrapping"
-								id="uploadlink"
-								minlength="10"
-								maxlength="150"
-								required
-							/>
-						</div>
-						<div class="d-flex justify-content-end" style="width: 80%">
-							<p class="spanp d-flex">
-								Characters left &nbsp;<span class="changablespan"></span
-								><span>/150</span>
-							</p>
-						</div>
-						<div class="input-group flex-nowrap" style="width: 80%">
-							<span class="input-group-text" id="addon-wrapping">Add Link</span>
-							<input
-								type="url"
-								name="link"
-								class="form-control inputtext"
-								aria-label="Username"
-								aria-describedby="addon-wrapping"
-								id="uploadlink"
-							/>
-						</div>
-						<div>
-							<button
-								type="button"
-								class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn"
-							>
-								Back
-							</button>
-							<button type="submit" class="btn btn-outline-primary mt-5">
-								submit
-							</button>
-						</div>
-					</form>
-				</div>
 				<form
 					action="/admin/latestupdates?_method=DELETE"
 					method="post"
 					class="imgform latestupdateform"
 				>
-					<h1 class="m-5">Latest Updates</h1>
-
-					
+					<h1 class="m-5">Change Password</h1>
+                    <div class="form-group">
+                        <label for="oldpassword">Old Password</label>
+                        <input
+                            type="password"
+                            class="form-control"
+                            id="oldpassword"
+                            name="oldpassword"
+                            placeholder="Enter old password"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label for="newpassword">New Password</label>
+                        <input
+                            type="password"
+                            class="form-control"
+                            id="newpassword"
+                            name="newpassword"
+                            placeholder="Enter new password"
+                        />
+                    </div>
+                    <div class="form-group">
+                        <label for="confirmpassword">Confirm Password</label>
+                        <input
+                            type="password"
+                            class="form-control"
+                            id="confirmpassword"
+                            name="confirmpassword"
+                            placeholder="Confirm password"
+                    />
+                    </div>
+                    <button type="submit" class="btn btn-primary">
+                        Submit
+                    </button>
 				</form>
 			</div>
 		</section>
