--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Admin panel</title>
 		<link rel="stylesheet" href="../../stylesheets/sliderrevolution.css" />
+		<link rel="stylesheet" href="../../stylesheets/pagination.css" />
+
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -47,49 +49,26 @@
 								<th scope="col">Updates</th>
 							</tr>
 						</thead>
-						<tbody>
-							<% img.forEach(i => { %>
-							<tr>
-								<td style="padding: 0.3rem">
-									<p class="onclickimg mb-1"><%= i.imgname %></p>
-									<span class="currentPreviewSpan btn btn-info"
-										>Show Image</span
-									>
-									<span class="currentSliderimgurl"><%= i.sliderimg %> </span>
-								</td>
-								<td style="padding: 0.3rem">
-									<input
-										type="file"
-										id="image"
-										accept="image/*"
-										class="fileimg uploaddisplay"
-										name="sliderimg"
-									/>
-									<button class="previewSpan displaybtn btn" disabled>Display</button>
-									<span class="sliderimgurl"></span>
-								</td>
-								<td style="padding: 0.3rem">
-									<input
-										type="checkbox"
-										id="checkbox"
-										class="updatesCheckbox"
-										disabled
-										name="checkbox"
-										value="<%= i.cloudinaryName %>"
-										style="height: 20px; width: 20px"
-									/>
-								</td>
-							</tr>
-							<% }) %>
-						</tbody>
+						<tbody class="tbody"></tbody>
 					</table>
+					<div id="pagination-container" class="mb-3"></div>
+
 					<button type="submit" class="btn btn-outline-primary submit" disabled>
 						Submit
 					</button>
 				</form>
 			</div>
 		</section>
-
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
+			integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<script src="../../javascripts/admin/home/sliderRevolution.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
