--- a/views/layout/adminheader.ejs
+++ b/views/layout/adminheader.ejs
@@ -87,7 +87,7 @@
 				</svg>
 			</a>
 			<ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-				<li><a class="dropdown-item" href="">Settings</a></li>
+				<li><a class="dropdown-item" href="/changepassword">Settings</a></li>
 				<li><hr class="dropdown-divider" /></li>
 				<li>
 					<form action="/signout" method="post">
