--- a/views/admin/auth/changepassword.ejs
+++ b/views/admin/auth/changepassword.ejs
@@ -22,40 +22,48 @@
 			</div>
 			<div class="right">
 				<form
-					action="/admin/latestupdates?_method=DELETE"
+					action="/changepassword"
 					method="post"
 					class="imgform latestupdateform"
 				>
 					<h1 class="m-5">Change Password</h1>
-                    <div class="form-group">
-                        <label for="oldpassword">Old Password</label>
-                        <input
-                            type="password"
-                            class="form-control"
-                            id="oldpassword"
-                            name="oldpassword"
-                            placeholder="Enter old password"
+                    <div class="formdiv" style="width: 50%;">
+                        <div class="input-group flex-nowrap mb-3">
+                            <span class="input-group-text" id="addon-wrapping">Old Password</span>
+                            <input
+                                type="password"
+                                class="form-control"
+                                id="password"
+                                name="password"
+                                aria-label="Username"
+                                aria-describedby="addon-wrapping"
+                                placeholder="Enter old password"
+                            />
+                        </div>
+                        <div class="input-group flex-nowrap mb-3">
+                            <span class="input-group-text" id="addon-wrapping">New Password</span>
+                            <input
+                                type="password"
+                                class="form-control"
+                                id="newpassword"
+                                name="newpassword"
+                                aria-label="Username"
+                                aria-describedby="addon-wrapping"
+                                placeholder="Enter new password"
+                            />
+                        </div>
+                        <div class="input-group flex-nowrap mb-3">
+                            <span class="input-group-text" id="addon-wrapping">Confirm Password</span>
+                            <input
+                                type="password"
+                                class="form-control"
+                                id="confirmpassword"
+                                name="confirmpassword"
+                                aria-label="Username"
+                                aria-describedby="addon-wrapping"
+                                placeholder="Confirm password"
                         />
-                    </div>
-                    <div class="form-group">
-                        <label for="newpassword">New Password</label>
-                        <input
-                            type="password"
-                            class="form-control"
-                            id="newpassword"
-                            name="newpassword"
-                            placeholder="Enter new password"
-                        />
-                    </div>
-                    <div class="form-group">
-                        <label for="confirmpassword">Confirm Password</label>
-                        <input
-                            type="password"
-                            class="form-control"
-                            id="confirmpassword"
-                            name="confirmpassword"
-                            placeholder="Confirm password"
-                    />
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-primary">
                         Submit
