--- a/views/admin/results/images.ejs
+++ b/views/admin/results/images.ejs
@@ -65,7 +65,9 @@
 										class="fileimg uploaddisplay"
 										name="sliderimg"
 									/>
-									<button class="previewSpan displaybtn btn" disabled>Display</button>
+									<button class="previewSpan displaybtn btn" disabled>
+										Display
+									</button>
 									<span class="sliderimgurl"></span>
 								</td>
 								<td>
