--- a/views/admin/demovideos/headimage.ejs
+++ b/views/admin/demovideos/headimage.ejs
@@ -64,7 +64,9 @@
 										class="fileimg uploaddisplay"
 										name="sliderimg"
 									/>
-									<button class="previewSpan displaybtn btn" disabled>Display</button>
+									<button class="previewSpan displaybtn btn" disabled>
+										Display
+									</button>
 									<span class="sliderimgurl"></span>
 								</td>
 								<td>
@@ -77,7 +79,7 @@
 										value="<%= img.cloudinaryName %>"
 										style="height: 20px; width: 20px"
 									/>
-								</td>	
+								</td>
 							</tr>
 						</tbody>
 					</table>
@@ -87,7 +89,16 @@
 				</form>
 			</div>
 		</section>
-
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+			referrerpolicy="no-referrer"
+		></script>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.5/pagination.min.js"
+			integrity="sha512-1zzZ0ynR2KXnFskJ1C2s+7TIEewmkB2y+5o/+ahF7mwNj9n3PnzARpqalvtjSbUETwx6yuxP5AJXZCpnjEJkQw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		></script>
 		<script src="../../javascripts/admin/home/sliderRevolution.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
