--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -60,7 +60,7 @@
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<div class="preview">
-					<h1 class="mb-5">History</h1>
+					<h5 class="mb-5 fs-4 fw-bold">History</h5>
 					<form
 						action="/admin/aboutus/history"
 						method="post"
@@ -114,7 +114,7 @@
 					method="post"
 					class="imgform latestupdateform"
 				>
-					<h1 class="m-5">History</h1>
+					<h1 class="m-5 fs-4 fw-bold">History</h1>
 
 					<table class="table" style="width: 70%">
 						<thead>
