--- a/views/admin/demovideos/Demovideos.ejs
+++ b/views/admin/demovideos/Demovideos.ejs
@@ -25,7 +25,7 @@
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<div class="preview">
-					<h1 class="mb-5">Demo Vedios</h1>
+					<h1 class="mb-5 fs-4 fw-bold">Demo Videos</h1>
 					<form
 						action="/admin/demovideos"
 						method="post"
@@ -62,7 +62,7 @@
 					method="post"
 					class="imgform demoVideosForm"
 				>
-					<h1 class="m-5">Demo Vedios</h1>
+					<h1 class="m-5 fs-4 fw-bold">Demo Videos</h1>
 
 					<table class="table" style="width: 70%">
 						<thead>
