--- a/views/admin/demovideos/headimage.ejs
+++ b/views/admin/demovideos/headimage.ejs
@@ -38,7 +38,7 @@
 					class="imgform"
 					enctype="multipart/form-data"
 				>
-					<h1 class="m-5">DemoVideos Image</h1>
+					<h1 class="m-5 fs-4 fw-bold">DemoVideos Image</h1>
 					<table class="table" style="width: 70%">
 						<thead>
 							<tr>
