--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -22,7 +22,7 @@
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<div class="preview">
-					<h1 class="mb-5">Calendar Events</h1>
+					<h1 class="mb-5 fs-4 fw-bold">Calendar Events</h1>
 					<form
 						action="/admin/calendarevents"
 						method="post"
@@ -81,7 +81,7 @@
 					method="post"
 					class="imgform latestupdateform"
 				>
-					<h1 class="m-3">Calendar Events</h1>
+					<h1 class="m-3 fs-4 fw-bold">Calendar Events</h1>
 					<table class="table" style="width: 70%">
 						<thead>
 							<tr>
