--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -24,7 +24,7 @@
 			</div>
 			<div class="right">
 				<div class="preview">
-					<h1 class="mb-5">Latest Updates</h1>
+					<h1 class="mb-5 fs-4 fw-bold">Latest Updates</h1>
 					<form
 						action="/admin/latestupdates"
 						method="post"
@@ -80,7 +80,7 @@
 					method="post"
 					class="imgform latestupdateform"
 				>
-					<h1 class="m-4">Latest Updates</h1>
+					<h1 class="m-4 fs-4 fw-bold">Latest Updates</h1>
 
 					<table class="table" style="width: 70%">
 						<thead>
