--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -35,7 +35,7 @@
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<div class="preview">
-					<h1 class="mb-5">Our Toppers</h1>
+					<h1 class="mb-5 fs-4 fw-bold">Our Toppers</h1>
 					<form
 						action="/admin/ourtoppers"
 						method="post"
@@ -116,7 +116,7 @@
 					method="post"
 					class="imgform"
 				>
-					<h1 class="m-5">Our Toppers</h1>
+					<h1 class="m-5 fs-4 fw-bold">Our Toppers</h1>
 
 					<table class="table" style="width: 70%">
 						<thead>
