--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -20,7 +20,7 @@
       <div class="left"><%- include('../../layout/adminSideBar') %></div>
       <div class="right">
         <div class="preview">
-          <h1 class="mb-5">Student Testimonials</h1>
+          <h1 class="mb-5 fs-4 fw-bold">Student Testimonials</h1>
           <form
             action="/admin/studenttestimonials"
             method="post"
@@ -57,7 +57,7 @@
           method="post"
           class="imgform latestupdateform"
         >
-          <h1 class="m-5">Student Testimonials</h1>
+          <h1 class="m-5 fs-4 fw-bold">Student Testimonials</h1>
           <table class="table" style="width: 70%">
             <thead>
               <tr>
