--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -59,7 +59,7 @@
         </form>
         <!--previewdiv  -->
         <div class="preview">
-          <h1 class="mb-5">Student Details</h1>
+          <h1 class="mb-5 fs-4 fw-bold">Student Details</h1>
           <form
             action="/admin/results/studentdetails"
             method="post"
@@ -133,7 +133,7 @@
         </div>
         <!-- preview2 -->
         <div class="preview2">
-          <h1 class="mb-5">Student Details</h1>
+          <h1 class="mb-5 fs-4 fw-bold">Student Details</h1>
           <form
             action="/admin/results/studentupdate"
             method="post"
@@ -202,7 +202,7 @@
           method="post"
           class="imgform latestupdateform"
         >
-          <h1 class="m-5">Student Details</h1>
+          <h1 class="m-5 fs-4 fw-bold">Student Details</h1>
 
           <table class="table" style="width: 70%">
             <thead>
