--- a/views/admin/auth/changepassword.ejs
+++ b/views/admin/auth/changepassword.ejs
@@ -26,7 +26,7 @@
 					method="post"
 					class="imgform latestupdateform"
 				>
-					<h1 class="m-5">Change Password</h1>
+					<h1 class="m-5 fs-4 fw-bold">Change Password</h1>
                     <div class="formdiv" style="width: 50%;">
                         <div class="input-group flex-nowrap mb-3">
                             <span class="input-group-text" id="addon-wrapping">Old Password</span>
