--- a/views/admin/home/neetAchievements.ejs
+++ b/views/admin/home/neetAchievements.ejs
@@ -19,7 +19,7 @@
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
 			<div class="right">
 				<div class="preview">
-					<h1 class="mb-5">Neet Achievements</h1>
+					<h1 class="mb-5 fs-4 fw-bold">Neet Achievements</h1>
 					<form
 						action="/admin/neetachievements"
 						method="post"
@@ -106,7 +106,7 @@
 					method="post"
 					class="imgform"
 				>
-					<h1 class="m-5">Neet Achievements</h1>
+					<h1 class="m-5 fs-4 fw-bold">Neet Achievements</h1>
 
 					<table class="table" style="width: 70%;">
 						<thead>
