--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -40,7 +40,7 @@
 					class="imgform"
 					enctype="multipart/form-data"
 				>
-					<h1 class="mt-5 mb-3">Slider Revolution</h1>
+					<h1 class="mt-5 mb-3 fs-4 fw-bold">Slider Revolution</h1>
 					<table class="table" style="width: 70%">
 						<thead>
 							<tr>
