--- a/views/admin/successstories/parenttestimonial.ejs
+++ b/views/admin/successstories/parenttestimonial.ejs
@@ -33,7 +33,7 @@
       <div class="left"><%- include('../../layout/adminSideBar') %></div>
       <div class="right" style="height: auto">
         <div class="preview">
-          <h1 class="mb-5">Parent Testimonials</h1>
+          <h1 class="mb-5 fs-4 fw-bold">Parent Testimonials</h1>
           <form
             action="/admin/successstories/parenttestimonials"
             method="post"
@@ -98,7 +98,7 @@
           method="post"
           class="imgform"
         >
-          <h1 class="m-5">Parent Testimonials</h1>
+          <h1 class="m-5 fs-4 fw-bold">Parent Testimonials</h1>
 
           <table class="table" style="width: 70%">
             <thead>
