--- a/views/admin/home/calendarEvents.ejs
+++ b/views/admin/home/calendarEvents.ejs
@@ -99,8 +99,7 @@
 						</button>
 						<button
 							type="button"
-							disabled
-							class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+							class="btn btn-outline-danger submit ms-5 px-3 submitbtn warningcheck"
 						>
 							Delete
 						</button>
