--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -53,7 +53,7 @@
 					</table>
 					<div id="pagination-container" class="mb-3"></div>
 
-					<button type="submit" class="btn btn-outline-primary submit" disabled>
+					<button type="button" class="btn btn-outline-primary submit warningcheck">
 						Submit
 					</button>
 				</form>
