--- a/views/admin/home/studentTestimonials.ejs
+++ b/views/admin/home/studentTestimonials.ejs
@@ -103,8 +103,7 @@
 						<% } %> 
             <button
               type="button"
-              disabled
-              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
+              class="btn btn-outline-danger submit ms-5 px-3 submitbtn warningcheck"
             >
               Delete
             </button>
