--- a/views/admin/results/studentdetails.ejs
+++ b/views/admin/results/studentdetails.ejs
@@ -235,8 +235,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
-              disabled
+              class="btn btn-outline-danger submit ms-5 px-3 submitbtn warningcheck"
             >
               Delete
             </button>
