--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -33,7 +33,7 @@
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
-			<div class="right">
+			<div class="right top">
 				<div class="preview">
 					<h1 class="mb-5 fs-4 fw-bold">Our Toppers</h1>
 					<form
