--- a/views/admin/successstories/parenttestimonial.ejs
+++ b/views/admin/successstories/parenttestimonial.ejs
@@ -31,7 +31,7 @@
     <%- include('../../layout/adminheader') %>
     <section class="mainsection">
       <div class="left"><%- include('../../layout/adminSideBar') %></div>
-      <div class="right" style="height: auto">
+      <div class="right succ1" style="height: auto">
         <div class="preview">
           <h1 class="mb-5 fs-4 fw-bold">Parent Testimonials</h1>
           <form
