--- a/views/admin/successstories/testimonials.ejs
+++ b/views/admin/successstories/testimonials.ejs
@@ -31,7 +31,7 @@
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
-			<div class="right">
+			<div class="right succ1">
 				<div class="preview">
 					<h1 class="mb-5 fs-4 fw-bold">Student Testimonials</h1>
 					<form
