--- a/views/home.ejs
+++ b/views/home.ejs
@@ -153,7 +153,7 @@
 					<section class="drive">
 						<div class="bottom-drive">
 							<a
-								href="https://drive.google.com/file/d/1AekSeStzaqDFCfLAH372bR1bwTOs7ky2/view?usp=sharing">Download
+								href="https://drive.google.com/file/d/1AekSeStzaqDFCfLAH372bR1bwTOs7ky2/view?usp=sharing" target="_blank">Download
 								Free Questions Bank for Neet-
 								<span class="latestEdition">Latest edition</span></a>
 						</div>
