--- a/views/admin/demovideos/headimage.ejs
+++ b/views/admin/demovideos/headimage.ejs
@@ -91,7 +91,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<button type="submit" class="btn btn-outline-primary submit" disabled>
+					<button type="button" class="btn btn-outline-primary submit warningcheck">
 						Submit
 					</button>
 				</form>
@@ -115,23 +115,63 @@
 		<script>
 			const previewDiv = document.querySelector('.preview');
 			const closesvg = document.querySelector('.closesvg');
+			const submitbtn = document.querySelector(".submit");
+
 			const uploadDisplayInput = (e) => {
-				e.parentNode.parentNode.children[2].children[0].removeAttribute(
-					'disabled'
-				);
-				e.parentNode.children[1].classList.add('btn-info');
-				e.parentNode.children[1].removeAttribute('disabled');
-				e.parentNode.children[2].innerText = URL.createObjectURL(e.files[0]);
+				e.parentNode.parentNode.children[2].children[0].removeAttribute("disabled");
+				if(e.value != ""){
+					e.parentNode.parentNode.children[2].children[0].removeAttribute("disabled");
+					submitbtn.classList.remove("warningcheck");
+					e.parentNode.children[1].classList.add("btn-info");
+					e.parentNode.children[1].removeAttribute("disabled");
+					e.parentNode.children[2].innerText = URL.createObjectURL(e.files[0]);
+				}else{
+					e.parentNode.parentNode.children[2].children[0].setAttribute("disabled", true);
+					e.parentNode.children[1].classList.remove("btn-info");
+					e.parentNode.children[1].setAttribute("disabled", true);
+					submitbtn.classList.add("warningcheck");
+				}
 			};
 			
-
-			const updatesCheckboxChange = (e) => {
+			const nocontentswal = () => {
+				Swal.fire({
+					position: "center",
+					icon: "warning",
+					title: "Please upload any image",
+					showConfirmButton: false,
+					timer: 2500,
+				});
+			};
+			const checkswal = () => {
+				Swal.fire({
+					position: "center",
+					icon: "warning",
+					title: "Please check any checkbox",
+					showConfirmButton: false,
+					timer: 2500,
+				});
+			};
+			submitbtn.addEventListener("click", () => {
 				if (
-					document.querySelectorAll('input[type="checkbox"]:checked').length
+					submitbtn.getAttribute("type") == "button" &&
+					submitbtn.classList.contains("warningcheck")
 				) {
-					document.querySelector('.submit').removeAttribute('disabled');
+					nocontentswal();
+				} else if (
+					submitbtn.getAttribute("type") == "button" &&
+					!submitbtn.classList.contains("warningcheck")
+				) {
+					checkswal();
 				} else {
-					document.querySelector('.submit').setAttribute('disabled', true);
+					return;
+				}
+			});
+			const updatesCheckboxChange = (e) => {
+				if (document.querySelectorAll('input[type="checkbox"]:checked').length) {
+					submitbtn.setAttribute("type", "submit");
+				} else {
+					submitbtn.setAttribute("type", "button");
+					submitbtn.classList.add("warningcheck");
 				}
 			};
 			const previewSpanClick = (e) => {
