--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -150,8 +150,7 @@
 						<% } %>
 						<button
 							type="button"
-							class="btn btn-outline-danger submit ms-5 px-3 submitbtn"
-							disabled
+							class="btn btn-outline-danger submit ms-5 px-3 submitbtn warningcheck"
 						>
 							Delete
 						</button>
