--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -6,6 +6,7 @@
 			<div class="footer_content">
 				
 				<div class="footer-body">
+				<div class="footerInner">
 					<div class="address-container">
 						<h1>Salem</h1>
 						<div><span><svg xmlns="http://www.w3.org/2000/svg" class="location-svg" viewBox="0 0 20 20"
@@ -18,11 +19,11 @@
 								Gounder Kalyana Mandapam,
 								Salem - 4</div>
 						</div>
-						<span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+						<!-- <span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
 								fill="currentColor">
 								<path
 									d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
-							</svg> &nbsp; +91-78670 14165</span>
+							</svg> &nbsp; +91-78670 14165</span> -->
 					</div>
 					<div class="address-container">
 						<h1>Namakkal</h1>
@@ -35,11 +36,11 @@
 							<div class="address">84-B/5, Third Floor, S.S Complex (Ramesh Theatre Bus Stop),Trichy Road,
 								Namakkal - 637002</div>
 						</div>
-						<span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+						<!-- <span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
 								fill="currentColor">
 								<path
 									d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
-							</svg> &nbsp; +91-78670 14168</span>
+							</svg> &nbsp; +91-78670 14168</span> -->
 					</div>
 					<div class="address-container">
 						<h1>Dharmapuri</h1>
@@ -53,11 +54,11 @@
 							<div class="address">5-A1, Narasimma Achari Street, Town BSNL office Back Side, Dharmapuri -
 								636701
 							</div>
-						<span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+						<!-- <span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
 								fill="currentColor">
 								<path
 									d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
-							</svg> &nbsp; +91-78670 14164</span>
+							</svg> &nbsp; +91-78670 14164</span> -->
 					</div>
 					<div class="address-container">
 						<h1>Vellore</h1>
@@ -72,11 +73,39 @@
 								Katpadi Rd/New Bye-pass Road,
 								Vellore</div>
 						</div>
-						<span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+						<!-- <span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
 								fill="currentColor">
 								<path
 									d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
-							</svg> &nbsp; +91-7373755664</span>
+							</svg> &nbsp; +91-7373755664</span>  +91-78670 14164-->
+					</div>
+				</div>
+					<div class="addressbox">
+						<span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+							fill="currentColor">
+							<path
+								d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
+						</svg> &nbsp; +91-78670 14165</span>
+
+						<span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+							fill="currentColor">
+							<path
+								d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
+						</svg> &nbsp; +91-78670 14168</span>
+
+						d
+						<span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+							fill="currentColor">
+							<path
+								d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
+						</svg> &nbsp; +91-78670 14164</span>
+
+
+						<span><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20"
+							fill="currentColor">
+							<path
+								d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z" />
+						</svg> &nbsp; +91-7373755664</span>
 					</div>
 				</div>
 				
