--- a/views/admin/demovideos/Demovideos.ejs
+++ b/views/admin/demovideos/Demovideos.ejs
@@ -15,16 +15,11 @@
 		/>
 	</head>
 	<body>
-		<a href="#buttonid"
-			><img
-				class="downarrow"
-				src="https://img.icons8.com/material-rounded/96/000000/low-importance.png"
-		/></a>
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
-			<div class="right ">
-				<div class="preview ">
+			<div class="right">
+				<div class="preview">
 					<h1 class="mb-5 fs-4 fw-bold">Demo Videos</h1>
 					<form
 						action="/admin/demovideos"
@@ -99,15 +94,31 @@
 					</table>
 					<div class="buttondiv" id="buttonid">
 						<% if (link.length<9) { %>
-							<button type="button" class="btn btn-outline-primary addbtn px-4">
-								Add
-							</button>
+						<button type="button" class="btn btn-outline-primary addbtn px-4">
+							Add
+						</button>
 						<% }else{ %>
-							<p class="text-danger d-flex justify-content-center align-items-center">You have reached your limit</p> 
-						<% } %> 
+						<p
+							class="
+								text-danger
+								d-flex
+								justify-content-center
+								align-items-center
+							"
+						>
+							You have reached your limit
+						</p>
+						<% } %>
 						<button
 							type="button"
-							class="btn btn-outline-danger submit ms-5 px-3 submitbtn warningcheck"
+							class="
+								btn btn-outline-danger
+								submit
+								ms-5
+								px-3
+								submitbtn
+								warningcheck
+							"
 						>
 							Delete
 						</button>
