--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -62,6 +62,7 @@
 							<input
 								type="file"
 								name="studentimg"
+								accept="image/*"
 								class="form-control"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
