--- a/views/admin/chatbot/chatbot.ejs
+++ b/views/admin/chatbot/chatbot.ejs
@@ -67,9 +67,8 @@
 							justify-content-center
 							align-items-center
 							flex-column
-							imgform"
+							chatbotform imgform"
 						style="width: 100%"
-						enctype="multipart/form-data"
 				>
 					<div class="buttondiv">
 						<button
