--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -31,12 +31,14 @@
 						class="d-flex justify-content-center align-items-center flex-column"
 						style="width: 100%"
 					>
+						<p class="err-message text-danger"></p>
 						<div class="input-group flex-nowrap" style="width: 80%">
+							<br />
 							<span class="input-group-text" id="addon-wrapping">Add News</span>
 							<input
 								type="text"
 								name="uploadlink"
-								class="form-control inputtext"
+								class="form-control inputtext news-input"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
@@ -99,7 +101,14 @@
 						</button>
 						<button
 							type="button"
-							class="btn btn-outline-danger submit ms-5 px-3 submitbtn warningcheck"
+							class="
+								btn btn-outline-danger
+								submit
+								ms-5
+								px-3
+								submitbtn
+								warningcheck
+							"
 						>
 							Delete
 						</button>
