--- a/views/admin/home/ourToppers.ejs
+++ b/views/admin/home/ourToppers.ejs
@@ -93,7 +93,7 @@
 							<input
 								type="text"
 								name="collegeName"
-								class="form-control"
+								class="form-control collegenum"
 								aria-label="Username"
 								aria-describedby="addon-wrapping"
 								id="uploadlink"
