--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -128,10 +128,11 @@
 				</div>
 			</div>
 		</section>
-
+		<% console.log(success); %> 
 		<% if(success && success.length) {%>
 		<p class="sweetp"><%= success %></p>
-		<% } %> <%- include('./layout/footer') %>
+		<% } %>
+		<%- include('./layout/footer') %>
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<script src="javascripts/nav.js"></script>
 		<script src="javascripts/contactus.js"></script>
